<resources>
    <string name="app_name">Counters</string>
    <string name="onboarding_title">Counters</string>
    <string name="onboarding_description">Capture cups of lattes, frapuccinos, or anything else that can be counted.</string>
    <string name="get_started">Get started</string>
    <string name="no_counters_yet">No counters yet</string>
    <string name="no_counters_yet_message">“When I started counting my blessings, my whole life turned around.” \n —Willie Nelson</string>
    <string name="couldnt_load_the_counters">Couldn’t load the counters</string>
    <string name="couldnt_load_the_counters_message">The Internet connection appears to be offline.</string>
    <string name="retry">Retry</string>
    <string name="search_counters">Search Counters</string>
    <string name="add_counter">Add Counter</string>
    <string name="items">%s items</string>
    <string name="times">%s times</string>
    <string name="give_it_a_name">Give it a name. Creative block? See <u>examples</u>.</string>
    <string name="name">Name</string>
    <string name="create_counter">Create counter</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="examples">Examples</string>
    <string name="hint_example_add_counter">Cups of coffee</string>
    <string name="add_counter_name">Please, add a counter name</string>
    <string name="couldnt_update_counter">Couldn’t update the “Apples eaten” counter to 1</string>
    <string name="couldnt_update_counter_message">The Internet connection appears to be offline.</string>
    <string name="select_example_counters">Select an example to add it to your counters.</string>
    <string name="drinks">Drinks</string>
    <string name="food">Food</string>
    <string name="misc">Misc</string>
    <string name="confirm_delete_message">Delete “Records played”?</string>
    <string name="delete_title">%s selected</string>
    <string name="select_one_item">Select 1 item</string>
    <string name="no_results">No results</string>
</resources>