<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.example.ExampleCounterActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/examples" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineVerticalStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="21dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineVerticalEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="21dp" />

        <TextView
            android:id="@+id/textViewLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/select_example_counters"
            app:layout_constraintEnd_toEndOf="@+id/guideLineVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guideLineVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textViewLabelDrinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/drinks"
            app:layout_constraintEnd_toEndOf="@+id/guideLineVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guideLineVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDrinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelDrinks" />

        <TextView
            android:id="@+id/textViewLabelFood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/food"
            app:layout_constraintEnd_toEndOf="@+id/guideLineVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guideLineVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewDrinks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelFood" />

        <TextView
            android:id="@+id/textViewLabelMisc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/misc"
            app:layout_constraintEnd_toEndOf="@+id/guideLineVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guideLineVerticalStart"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewFood" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMisc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelMisc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>