<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    app:layoutDescription="@xml/onboarding_scene"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVerticalStart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVerticalEnd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontalLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontalStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideLineHorizontalLogo"
        app:srcCompat="@drawable/ic_onboarding_logo" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title"
        android:textAlignment="center"
        android:textColor="@color/text_color_primary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/guideLineVerticalEnd"
        app:layout_constraintStart_toStartOf="@+id/guideLineVerticalStart"
        app:layout_constraintTop_toTopOf="@+id/guideLineHorizontalTitle" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/onboarding_description"
        android:textAlignment="center"
        android:textColor="@color/text_color_secondary"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/guideLineVerticalEnd"
        app:layout_constraintStart_toStartOf="@+id/guideLineVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/buttonStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/get_started"
        android:textColor="@color/color_primary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideLineHorizontalStarted" />
</androidx.constraintlayout.motion.widget.MotionLayout>